@@ -1,3 +1,5 @@
+* fix bug in handling negative data in kill_spike, thanks to reihel for
+  reporting
 * Panalytical XRDML: parse hkl from file if present
 * CIF exporter and possibility to parse CIF files from string representations
 * new reflectivity code based on transfer matrices (contributed by Numan
